GP time offset modifier, frame offset value changes to -2147483647 when using the inc/dec icons #68943

Closed
opened 2019-08-20 23:50:10 +02:00 by heini · 9 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13

Blender Version
Broken: version: 2.81 (sub 2), branch: master, commit date: 2019-08-20 07:45, hash: f2cab8267f
Worked: (optional)

Short description of error
Time offset modifier in GP: the value of 'frame offset' changes to -2147483647 when clicking the < and > icons

Exact steps for others to reproduce the error

  • create GP object
  • add time offset modifier
  • click on arrows left and right of the input field
  • -2147483647
**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13 **Blender Version** Broken: version: 2.81 (sub 2), branch: master, commit date: 2019-08-20 07:45, hash: `f2cab8267f` Worked: (optional) **Short description of error** Time offset modifier in GP: the value of 'frame offset' changes to -2147483647 when clicking the < and > icons **Exact steps for others to reproduce the error** - create GP object - add time offset modifier - click on arrows left and right of the input field - -2147483647
Author

Added subscriber: @heini

Added subscriber: @heini
Member

Added subscribers: @antoniov, @lichtwerk

Added subscribers: @antoniov, @lichtwerk
Antonio Vazquez was assigned by Philipp Oeser 2019-08-21 10:01:03 +02:00
Member

Can confirm, @antoniov : mind checking?

Can confirm, @antoniov : mind checking?

I have tested these 3 arrows and works for me.

image.png

Maybe these are not the arrows to test.

I have tested these 3 arrows and works for me. ![image.png](https://archive.blender.org/developer/F7678484/image.png) Maybe these are not the arrows to test.

I can confirm with daily build.

I can confirm with daily build.
Member

note this also happens for shaderfx rim/shadow offset
rim/shadow blur also behave weird (dont increment/decrement using arrows)

note this also happens for shaderfx rim/shadow offset rim/shadow blur also behave weird (dont increment/decrement using arrows)

This issue was referenced by 8f50cdd7d5

This issue was referenced by 8f50cdd7d5cb43870add1b3e983fed92f84d864a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

It looks there is some type of Overflow in the UI code when the range is near of the INT max values. I have replaced by SHRT_MAX because is enough.

It looks there is some type of Overflow in the UI code when the range is near of the INT max values. I have replaced by SHRT_MAX because is enough.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68943
No description provided.